--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,3 +1,13 @@
+header{
+  width: 100%;
+  height: 40px;
+  margin-top: 0;
+  padding-left: 220px;
+  background-color: #f1f1f1;
+  position: fixed;
+  font-size: 30px;
+}
+
 .sidebar {
   margin: 0;
   padding: 0;
@@ -27,26 +37,38 @@
   color: white;
 }
 
-
-div.content {
-  margin-left: 100px;
+.content {
+  margin-left: 200px;
   padding: 1px 16px;
-  height: 1000px;
 }
 
 @media screen and (max-width: 700px) {
-  .sidebar {
+  header{
+    margin-left: 0;
+    padding: 0;
+    position: relative;
+    height: 30px;
+    width: 100%;
+  }
+  .sidebar{
     width: 100%;
     height: 150px;
     position: relative;
   }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
+  .sidebar a{
+    float: left;
+  }
+  div.content {
+    margin-left: 0;
+  }
 }
 
 @media screen and (max-width: 400px) {
-  .sidebar a .dropdown{
+  .sidebar a{
     text-align: center;
     float: none;
   }
+}
+.f1{
+  margin-top: 50px;
 }
