--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -49,10 +49,11 @@ header{
     position: relative;
     height: 30px;
     width: 100%;
+    text-align: center;
   }
   .sidebar{
     width: 100%;
-    height: 150px;
+    height: auto;
     position: relative;
   }
   .sidebar a{
@@ -63,7 +64,7 @@ header{
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .sidebar a{
     text-align: center;
     float: none;
