--- a/css/bcc_home_style.css
+++ b/css/bcc_home_style.css
@@ -1,11 +1,16 @@
+/*navigation bar*/
+
+body{
+  margin: 0;
+}
 header{
   width: 100%;
   height: 40px;
   margin-top: 0;
   padding-left: 220px;
-  background-color: #ffd700;
   position: fixed;
   font-size: 30px;
+  background-color: #ffd700;
 }
 
 .gilidbar {
@@ -52,6 +57,9 @@ header{
   .gilidbar a{
     float: left;
   }
+  .logo{
+    padding-left: 150px;
+  }
   div.content {
     margin-left: 0;
   }
@@ -65,4 +73,48 @@ header{
 }
 .f1{
   margin-top: 50px;
+}
+
+/*Main Content, Button, Search Bar, Add new*/
+
+.f1{
+  margin-top: 50px;
+}
+button{
+ width: 100%;
+  background-color: #6fbfe6;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #35afeb;
+}
+input[type=text]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  align-content: center;
+}
+
+input[type=submit]{
+  width: 100%;
+  background-color: #6fbfe6;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=submit]:hover{
+  background-color: #35afeb;
 }
